--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "projet7",
   "version": "1.0.0",
-  "description": "",
   "main": "sass/main.scss",
   "scripts": {
     "sass": "sass --watch ./sass/main.scss:./styles/main.css"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ExcaliburSims/ProjetKDA7.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ExcaliburSims/ProjetKDA7/issues"
+  },
+  "homepage": "https://github.com/ExcaliburSims/ProjetKDA7#readme",
+  "description": ""
 }
